bug fix: jquery cross domain cookie

--- a/xxx/index.html
+++ b/xxx/index.html
@@ -11,6 +11,8 @@
     <input type="file" name="imgFile">
     <button type="submit">xxoo</button>
   </form>
+  <img src="http://uc.taotaosou.com/isLogin" alt="uc.">
+  <img src="http://www.taotaosou.com/uc/isLogin" alt="www.">
   <script>
     document.domain = "taotaosou.com";
 
@@ -25,18 +27,34 @@
 
     $.ajax({
       url: 'http://www.taotaosou.com/uc/isLogin',
+      cache: false,
+      // crossDomain: true,
+      // headers: {
+      //   'Cookie': document.cookie
+      // },
       method: 'GET',
+      xhrFields: {
+        withCredentials: true
+      },
       success: function(data) {
         console.log(data);
       }
     });
 
-    $.get('http://uc.taotaosou.com/isLogin', function(data) {
-      console.log(data);
-    });
-
-    $.get('http://m.taotaosou.com/isLogin', function(data) {
-      console.log(data);
+    $.ajax({
+      url: 'http://uc.taotaosou.com/isLogin',
+      cache: false,
+      // crossDomain: true,
+      // headers: {
+      //   'Cookie': document.cookie
+      // },
+      method: 'GET',
+      xhrFields: {
+        withCredentials: true
+      },
+      success: function(data) {
+        console.log(data);
+      }
     });
   </script>
 </body>
