--- a/xxx/o.html
+++ b/xxx/o.html
@@ -8,8 +8,9 @@
   <button onclick="window.open('c.html', 'xx', '')">open 1</button>
   <button onclick="window.open('c.html', 'oo', 'width=300; height=300;')">open 2</button>
   <script>
-    window.fuck = function(msg) {
-      window.reload();
+    window.xxoo = function(msg) {
+      // window.reload();
+      alert('xxoo');
     };
   </script>
 </body>
