--- a/xxx/open.html
+++ b/xxx/open.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
   <title>open</title>
+  <script>
+    document.domain = 'taotaosou.com';
+  </script>
 </head>
 <body>
   <div>
@@ -16,7 +19,7 @@
   </div>
   <hr>
   <div>
-    <h2>淘宝</h2>
+    <h2>淘 宝</h2>
     <a href="http://www.taotaosou.com/uc/auth_taobao?isMobile=true">淘宝登录</a>
   </div>
 </body>
